# embed-images

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: duplicates.hpp  engine.hpp  inference.hpp  output.hpp  thumbnail.hpp
scripts/: export_timm_model.py
src/: duplicates.cpp  engine.cpp  inference.cpp  main.cpp  output.cpp  thumbnail.cpp
ui/: app.py
ui/static/: index.html
